--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,27 @@ license = "MIT"
 publish = false
 include = ["/Cargo.toml", "src/*.rs"]
 authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
-homepage = "https://g
+homepage = "https://github.com/liuchengxu/vim-clap"
+categories = ["command-line-utilities"]
+description = "Rust backend for the vim plugin vim-clap"
+
+[dependencies]
+clap = { version = "3.2", features = ["derive"] }
+tokio = { version = "1.23", features = ["rt"] }
+
+cli = { path = "crates/cli" }
+upgrade = { path = "crates/upgrade" }
+
+[build-dependencies]
+built = { package = "built", version = "0.6", features = ["git2"] }
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
+
+[profile.production]
+inherits = "release"
+
+# Sacrifice compile speed for execution speed by using optimization flags:
+
+# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
+lto = "fat"
+# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
+codegen-units = 1
